@@ -72,8 +72,11 @@
 			/** LED mask for the second LED on the board. */
 			#define LEDS_LED2        (1 << 7)
 
+			/** LED mask for the third LED on the board. */
+			#define LEDS_LED3        (1 << 5)
+
 			/** LED mask for all the LEDs on the board. */
-			#define LEDS_ALL_LEDS    (LEDS_LED1 | LEDS_LED2)
+			#define LEDS_ALL_LEDS    (LEDS_LED1 | LEDS_LED2 | LEDS_LED3)
 
 			/** LED mask for the none of the board LEDs. */
 			#define LEDS_NO_LEDS     0
